# VPACK

./: .dockerignore  .editorconfig  .env.docker.example  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AI_PROTOCOL.md  API_DESIGN_REPORT.md  CHANGELOG.md  CLAUDE.md  CODEBASE_DEPENDENCIES.md  COMPATIBILITY_REPORT.md  COMPREHENSIVE_TEST_SUITE.md  CONTRIBUTING.md  COUNTRIES_LIBRARY_IMPLEMENTATION_SUMMARY.md  COUNTRY_TIMEZONE_MAPPING_SUMMARY.md  DATABASE_REALITY.md  DEPLOYMENT_CHECKLIST.md  DOCKER_COMPOSE_GUIDE.md  DOCKER_COMPOSE_IMPLEMENTATION.md  DOCKER_FIXES_SUMMARY.md  DOCKER_IMAGES_CLEANUP.md  DOCKER_IMAGES_FINAL.md  DOCKER_QUICKSTART.md  DOCKER_README.md  Dockerfile  EPACK_REBRANDING_VERIFICATION_REPORT.md  FINAL_DELIVERABLES_SUMMARY.md  GLOBAL_TIMEZONE_CONFIGURATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  OFFLINE_ENHANCEMENTS_SUMMARY.md  OLD_NEW_STRUCTURE_MAPPING.md  ORIGINAL_CONFIG_INVENTORY.md  PATH_REFERENCE.md  POST_REFACTOR_ERRORS.md  README.md  REFACTORING_SUCCESS_REPORT.md  (+22 more)
.claude/: instructions.md
.claude/cache/: features-catalog.json
.claude/commands/: assessment.md  cleanup-organize.md  compare-backup.md  explain-log.md  feature-files.md  git.md  list-features.md
.claude/lessons/: README.md
.claude/skills/: learn-config.md  phased-planning.md
.claude/test-templates/: README.md
.github/: dependabot.yml
.github/workflows/: build-desktop.yml  ci.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  file_modification_policy.md  project_overview.md  project_structure.md  pydrive_import_fixes_status.md  suggested_commands.md  task_completion_guidelines.md  tech_stack.md
app/: head.tsx  layout.tsx  page.tsx
app/trace/: page.tsx
backend/: .dockerignore  .env.docker.example  .env.example  .gitignore  API_STEP5_TIMING_DOCUMENTATION.md  DOCKER_DEPLOYMENT.md  Dockerfile  FRAME_SAMPLER_TIMEZONE_INTEGRATION_SUMMARY.md  MIGRATION_README.md  REFACTORING_SUCCESS_REPORT.md  STEP5_INTEGRATION_INSTRUCTIONS.md  __init__.py  _version.py  add_test_data.py  app.py  cloud_function_client.py  config.json  database.py  database_zalopay_init.py  debug_auth.py  debug_auth_enhanced.py  docker-compose.example.yml  gunicorn.conf.py  migrate_simplify_timezone_schema.py  migrate_timezone_production.py  migrate_to_global_timezone.py  migration_pre_flight_check.py  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  start.sh  test_ai_qr_recovery.py  test_fixes.py  test_integration.py  test_integration_phase3.py  test_oauth2client_conversion.py  test_solution2.py  timezone_query_test_results.json
backend/.claude/: CLAUDE.md
backend/api/: arbitration_routes.py
backend/blueprints/: analysis_streaming_bp.py  cutter_bp.py  docker_management_bp.py  hand_detection_bp.py  qr_detection_bp.py  roi_bp.py  simple_hand_detection_bp.py
backend/database/: events.db  events.db-shm  events.db-wal  events.db.backup_20250829_083508
backend/modules/: config_loader.py  path_utils.py
backend/scripts/: parse_qr_timestamps.py
backend/templates/: payment_redirect.html
backend/tests/: TEST_SUITE_PROGRESS.md  __init__.py  conftest.py
desktop/: .gitignore  README.md  VALIDATION_REPORT.md  build_macos.py  build_windows.py  config.py  fix-macos-gatekeeper.sh  inno_setup.iss  launcher.py  requirements-desktop.txt  vpack-backend.spec  vpack-launcher.spec
docs/: AI_ARBITRATION_SYSTEM_DESIGN.md  AI_ARBITRATION_SYSTEM_README.md  AI_ARBITRATION_UI_FLOW.md  DonggoiN80cm.md  DonggoiN_1m.md  backend API.md  empty_event_tracking_and_ai_enhancement.md  option2-separate-boundary-lists-implementation.md  quy-trinh-dong-goi-chi-tiet.md  video-source-config-quick-reference.md  video-source-configuration-guide.md  video-source-technical-implementation.md  vtrack_onvif_integration_guide.md
docs/Noidung tien do/: Cau truc du an va de xuat cai thien.txt  Packingfile.txt  Thiet lap tien trinh xu ly.md  Toi uu update 15 04 25.txt  Vi sao chua ai lam nhu V Track.md  directory_structure.txt  oauth_security_phase1 (1).md  onvif_integration_documentation.md  onvif_integration_roadmap.md  onvif_rtsp_documentation.md  rtsp_download_guide.md  rtsp_real_hardware_plan.md  toiuu V-track.txt  updated_onvif_documentation.md  vtrack_cloud_integration_plan.md  vtrack_final_progress_report.md  vtrack_progress_corrected_final.md  vtrack_progress_day1_final.md  vtrack_progress_day2_final.md  vtrack_progress_lazy_folder_tree.md  vtrack_progress_lazy_folder_tree.txt  vtrack_progress_master_updated.md  vtrack_progress_summary source import (Local, NVR:ONVIF, Cloud Storage).md  vtrack_progress_update.md  vtrack_progress_updated.md  vtrack_progress_updated_final.md  vtrack_roadmap_universal path management.md
docs/backup code/: Vtrack_07_19_13_12.md  Vtrack_07_20_16_33.md  Vtrack_07_22_12_23.md  Vtrack_07_23_21_55.md  Vtrack_07_25_16_31.md  Vtrack_07_29_10_07.md  Vtrack_07_29_14_28.md  Vtrack_BE_07_19_13_12.md  Vtrack_BE_07_20_16_33.md  Vtrack_BE_07_22_12_23.md  Vtrack_BE_07_23_21_55.md  Vtrack_BE_07_25_16_31.md  Vtrack_BE_07_29_10_07.md  Vtrack_BE_07_29_14_28.md  Vtrack_FE_07_19_13_12.md  Vtrack_FE_07_20_16_33.md  Vtrack_FE_07_22_12_23.md  Vtrack_FE_07_23_21_55.md  Vtrack_FE_07_25_16_31.md  Vtrack_cloudfunction_08_04_21_27.md
docs/cloud-storage-integration/: 00-MASTER-PLAN.md
docs/dev-internal/: FRONTEND_ARCHITECTURE_CRITICAL.md  NAMING_CONVENTIONS.md  QUICK_REFERENCE.md
docs/epack-official/: README.md
docs/plans/: 2025-11-26-vpack-to-epack-rebranding.md
docs/project-completion/: ACTION_PLAN_CLAUDE.md  CLAUDE_COMMANDS_GUIDE.md  (+2 more)
environment/: .env.development  .env.production
frontend/: .dockerignore  .env.example  .prettierrc  Dockerfile  Dockerfile.dev  README.md  chat_session_summary.md  firebase.json  jest.config.js  jest.config.ts  jest.setup.js  jest.setup.ts  next.config.firebase.js  next.config.js  package-lock.json  package.json  tailwind.config.js  test_timezone_browser.html  test_timezone_manager.js  timezone_test_summary.md  tsconfig.json
scripts/: build_all.sh  setup_environment.sh
src/: routes.tsx
tests/: __init__.py  conftest.py
(+451 files in other folders)
