[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "epack"
version = "1.0.0"
description = "ePACK - Enterprise Video Processing & Analysis Container Kit. Professional-grade desktop application for automated video processing, AI-powered event detection, and intelligent tracking analysis."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Commercial"}
authors = [
    {name = "ePACK Team", email = "support@epack.app"},
]
keywords = [
    "video-processing",
    "computer-vision",
    "ai",
    "qr-detection",
    "hand-detection",
    "mediapipe",
    "opencv",
    "tracking",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Framework :: Flask",
]

# Core dependencies from backend/requirements.txt
dependencies = [
    "mediapipe==0.10.14",
    "opencv-contrib-python==4.10.0.84",
    "pyzbar==0.1.9",
    "pandas==2.2.3",
    "APScheduler==3.11.0",
    "Flask==3.1.0",
    "flask-cors==5.0.1",
    "Flask-Session==0.8.0",
    "Flask-SocketIO==5.5.1",
    "flask-sockets==0.2.1",
    "gevent==25.4.2",
    "gevent-websocket==0.10.1",
    "google-auth==2.40.3",
    "google-auth-oauthlib==1.2.2",
    "google-api-python-client==2.175.0",
    "google-api-core==2.25.1",
    "PyDrive2==1.15.4",
    "oauth2client==4.1.3",
    "httplib2==0.22.0",
    "cryptography==41.0.7",
    "PyJWT==2.10.1",
    "Jinja2==3.1.6",
    "tenacity==8.2.3",
    "python-dotenv==1.1.0",
    "python-dateutil==2.9.0.post0",
    "psutil==7.0.0",
    "requests==2.32.3",
    "readerwriterlock==1.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "flake8-docstrings>=1.7.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.12.0",
    "coverage[toml]>=7.4.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
]

[project.urls]
Homepage = "https://github.com/Binhnguyen041280/ePACK"
Documentation = "https://github.com/Binhnguyen041280/ePACK/tree/main/docs"
Repository = "https://github.com/Binhnguyen041280/ePACK"
"Bug Tracker" = "https://github.com/Binhnguyen041280/ePACK/issues"

[project.scripts]
epack = "backend.app:main"
epack-server = "backend.app:main"

[tool.hatchling.build.targets.wheel]
packages = ["backend"]

[tool.hatchling.build.targets.sdist]
include = [
    "/backend",
    "/frontend",
    "/docs",
    "/scripts",
    "/Makefile",
    "/Dockerfile",
    "/docker-compose.yml",
    "/.env.example",
    "/README.md",
    "/pyproject.toml",
    "/MANIFEST.in",
]
exclude = [
    "/.git",
    "/.github",
    "/.vscode",
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/*.pyd",
    "**/node_modules",
    "**/.next",
    "**/build",
    "**/dist",
    "**/*.egg-info",
    "**/.DS_Store",
    "**/var/logs",
    "**/*.db",
    "**/*.sqlite",
    "**/*.sqlite3",
]

# ============================================
# BLACK - Code Formatter
# ============================================
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | frontend
)/
'''

# ============================================
# ISORT - Import Sorter
# ============================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/node_modules/*", "*/frontend/*", "*/.venv/*"]

# ============================================
# MYPY - Type Checker
# ============================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    "^frontend/",
    "^node_modules/",
    "^build/",
    "^dist/",
]

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "mediapipe.*",
    "pyzbar.*",
    "pandas.*",
    "flask_socketio.*",
    "flask_sockets.*",
    "gevent.*",
    "googleapiclient.*",
    "pydrive2.*",
    "oauth2client.*",
]
ignore_missing_imports = true

# ============================================
# PYTEST - Testing Framework
# ============================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=backend",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "video: Tests that process video files",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================
# COVERAGE - Code Coverage
# ============================================
[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/node_modules/*",
    "*/frontend/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
